--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 /classes
 /checkouts
 pom.xml
+pom.xml.asc
 *.jar
 *.class
 .lein-deps-sum
 .lein-failures
 .lein-plugins
-*.swp
+.lein-repl-history
